# drone-pi

./: DRONE_STACK_OVERVIEW.md  mav.tlog  mav.tlog.raw
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/tag_hover_controller/lib/tag_hover_controller/: apriltag_pnp_broadcaster  apriltag_tf_broadcaster  hover_yaw_search  hover_yaw_search_v1
install/tag_hover_controller/share/tag_hover_controller/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/tag_hover_controller/share/tag_hover_controller/launch/: lockon_backbone.launch.py
log/: latest_build
src/tag_hover_controller/: setup.cfg  setup.py
