<?xml version="1.0"?>
<package format="3">
  <name>tag_hover_controller</name>
  <version>0.0.0</version>
  <description>Hover + yaw-search controller for MAVROS</description>
  <maintainer email="mars@todo.todo">mars</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

